--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "author": "Carlos Rodrigues <carlos.all.mail@gmail.com> (https://github.com/carlosnsr)",
   "license": "MIT",
+  "engines": {
+    "node": "^12.16"
+  },
   "devDependencies": {
     "aglio": "^2.3.0"
   }
